--- a/frontend/polievent/src/user/PostonMainPage.css
+++ b/frontend/polievent/src/user/PostonMainPage.css
@@ -1,45 +1,56 @@
-.post-container {
-    border: 0px solid #ccc;
-    background-color: rgb(212, 212, 212);
-    border-radius: 10px;
-    padding: 10x;
-    margin-bottom: 10px;
-    margin-left: 300px;
-    margin-top: 50px;
+.post-my-container {
+    background-color: rgb(255, 253, 253);
+    border-radius: 32px;
+    margin-top: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     height: 600px;
-    width: 600px;
-    margin-right: 100px;
-  }
-  
-  .post {
-    text-align: center; /* Wyśrodkowanie tekstu */
-    display: flex; /* Ustawienie kontenera na flexbox */
-    flex-direction: column; /* Ustawienie kierunku na kolumnę */
+    width: 800px;
+    margin-left: 200px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .post-my-container:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    }
+  .post-my {
+    font-family: 'Roboto', sans-serif;
+    text-align: center; 
+    display: flex;
+    flex-direction: column;
     height: 400px;
+    width: 100%;
+    color :black;
+    border-radius: 32px;
   }
-  
-.post .col {
-    border: 2px solid #000000; /* Grubość i kolor ramki */
-    border-radius: 10px; /* Zaokrąglenie rogów */
-    padding: 5px; /* Wewnętrzny margines wewnątrz kolumn */
-    margin: 10px; /* Zewnętrzny margines między kolumnami */
+  .post-my-desc
+  {
+    color :gray;
+    font-weight: bold;
   }
-  .post h2 {
+  .post-my .col {
+    border: 2px solid #000000;
+    border-radius: 32px;
+    padding: 5px;
+    margin: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .post-my .col:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  }
+  .post-my h2 {
     margin-bottom: 10px;
     text-align: center;
     justify-content: center;
   }
-  
-  .post p {
+  .post-my p {
     margin-bottom: 10px;
     text-align: left;
     justify-content: left;
     padding: 10px;
     font-weight: normal;
   }
-  
-  .post-details {
+  .post-my-details {
     font-style: italic;
     text-align: center;
     justify-content: center;
@@ -47,13 +58,13 @@
   .image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Dopasowanie obrazka do kontenera */
-    border-radius: 5px;
+    object-fit: cover; 
+    border-radius: 32px;
   }
   .image-container {
     position: relative;
     display: inline-block;
-    width: 600px;
+    width: 100%;
     height: 200px;
   }
   .text {
@@ -61,27 +72,24 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white; /* Kolor tekstu */
-    font-size: 35px; /* Rozmiar tekstu */
-    font-weight: bold; /* Grubość tekstu */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Cień tekstu */
+    color: rgb(255, 255, 255);
+    font-size: 35px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5); 
     justify-content: center;
     text-align: center;
     text-transform: uppercase;
   }
-  .post-footer {
-    margin-top: auto; /* Umiejscowienie stopki na dole */
-    padding-top: 10px; /* Odstęp na górze stopki */
-    border-top: 1px solid #ccc; /* Linia oddzielająca stopkę od treści posta */
-    background-color: #f9f9f9; /* Tło stopki posta */
-    color: #666; /* Kolor tekstu stopki posta */
-    font-size: 14px; /* Rozmiar czcionki dla stopki posta */
-    text-align: center; /* Wyśrodkowanie tekstu w stopce posta */
-  }
+  .post-my-footer {
+    margin-top: auto;
+    padding-top: 10px;
+    background-color: rgb(255, 255, 255);
+    color: #666;
+    font-size: 14px;
+    text-align: center;
+    width: 100%;
+    border-radius: 32px;
+    }
   .last-col {
     background-color: white;
-  }
-  .post-footer .button
-  {
-    background-color: aquamarine;
   }
