--- a/frontend/polievent/src/advertiser/AddPostPopup.css
+++ b/frontend/polievent/src/advertiser/AddPostPopup.css
@@ -11,7 +11,7 @@
     z-index: 1000;
   }
   
-  .popup button {
+  /*.popup button {
     margin-bottom: 16px;
     padding: 8px 16px;
     background: #007bff;
@@ -19,7 +19,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
+  }*/
   
   .popup button:hover {
     background: #0056b3;
