--- a/frontend/polievent/src/advertiser/SettingsPopup.css
+++ b/frontend/polievent/src/advertiser/SettingsPopup.css
@@ -1,4 +1,4 @@
-.popup {
+.advertiser-popup {
   position: fixed;
   top:0;
   left: 0;
@@ -11,7 +11,7 @@
   z-index: 999;
   overflow-y: auto;
 }
-.popup-longform {
+.advertiser-popup-longform {
  padding-top: 20%;
 }
 
