--- a/frontend/polievent/src/advertiser/AddPostPopup.css
+++ b/frontend/polievent/src/advertiser/AddPostPopup.css
@@ -1,4 +1,4 @@
-.popup {
+.advertiser-popup {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -9,9 +9,10 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
+    overflow-y: auto;
   }
   
-  /*.popup button {
+  advertiser-.popup button {
     margin-bottom: 16px;
     padding: 8px 16px;
     background: #007bff;
@@ -19,7 +20,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }*/
+  }
   
   .popup button:hover {
     background: #0056b3;
