--- a/frontend/polievent/src/advertiser/EventPage.css
+++ b/frontend/polievent/src/advertiser/EventPage.css
@@ -4,9 +4,9 @@
   margin: 0 auto;
 }
 
+
 .header-section {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -16,7 +16,7 @@
   font-size: 2em;
 }
 
-.header-section button {
+.header-section Button {
   margin-left: 10px;
   padding: 10px 20px;
   font-size: 1em;
@@ -40,6 +40,7 @@
 
 .left-section h3 {
   margin-top: 0;
+  font-weight: bold;
 }
 
 .posts-section {
