--- a/frontend/polievent/src/advertiser/HeaderSection.css
+++ b/frontend/polievent/src/advertiser/HeaderSection.css
@@ -1,19 +1,30 @@
 .header-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .header-section h1 {
-    margin: 0;
-    font-size: 2em;
-  }
-  
-  .header-section button {
-    margin-left: 10px;
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Align items vertically at the center */
+  margin-bottom: 20px;
+  background-color: #861818;
+  padding: 10px; /* Adjust padding to give more space around the content */
+  text-decoration: none;
+}
+
+.header-section h1 {
+  margin: 0;
+  font-size: 2em;
+  font-weight: bolder;
+  color: white;
+}
+
+.header-section .buttons {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.header-section button {
+  margin-left: 10px;
+  padding: 10px 20px;
+  font-size: 1em;
+  cursor: pointer;
+  text-decoration: none;
+}
