--- a/frontend/polievent/src/user/UserRegister.css
+++ b/frontend/polievent/src/user/UserRegister.css
@@ -1,5 +1,5 @@
 .RegisterBorder{
-    background-color: #861818;
+    background-color: #333;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -21,4 +21,7 @@
     color: rgb(211, 211, 211);
     font-family: 'Be Vietnam Pro';
     font-size: 20px;
+}
+.whitefont {
+    color: white;
 }
